--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -85,3 +85,19 @@ input {
   color: var(--primary);
   font-weight: 600;
 }
+input {
+  border: 1px solid #ccc;
+  color: #222020;
+  font-size: 16px;
+  background: inherit;
+  padding: 5px;
+  transition: all 0.3s ease;
+}
+input.error {
+  border-color: red;
+}
+.error-msg {
+  font-weight: 300;
+  font-size: 12px;
+  color: red;
+}
