Revamping the ui. Trying to see if i can get a hang of it. Will add the api for the keys next

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -106,3 +106,13 @@ p span.red {
   color: red;
   font-size: 18px;
 }
+.i {
+  font-style: italic;
+}
+.b {
+  font-weight: 600;
+}
+.pri {
+  color: var(--primary);
+  font-weight: 600;
+}
