--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -32,12 +32,6 @@ a {
   transition: 0.4s;
   cursor: pointer;
 }
-.btn:hover {
-  transform: scale(1.1);
-}
-.btn:active {
-  transform: scale(0.95);
-}
 
 .button-outline:hover,
 .a-button-outline:hover {
@@ -115,4 +109,51 @@ p span.red {
 .pri {
   color: var(--primary);
   font-weight: 600;
+}
+.u {
+	text-decoration: underline;
+}
+
+.b-pri,
+.b-sec,
+.b-danger {
+  padding: 8px 15px;
+  border-radius: 0.375rem;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 13px;
+  transition: all 0.3s ease;
+
+}
+.b-pri:active,
+.b-sec:active,
+.b-danger:active {
+  transform: scale(0.9);
+}
+.b-pri {
+  background: linear-gradient(45deg, lightblue, navy);
+  border: none;
+  color: white;
+}
+.b-pri:hover {
+  background: transparent;
+  border: 1px solid rgb(41, 41, 204);
+  color: black;
+}
+.b-sec {
+  border: 1px solid white;
+}
+.b-sec:hover {
+  background-color: #f1f5f9;
+  border-color: white;
+}
+.b-danger {
+  background-color: #dc2626;
+  border: 1px solid #dc2626;
+  color: white;
+}
+.b-danger:hover {
+  background-color: transparent;
+  border-color: #dc2626;
+  color: black;
 }
