--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -123,6 +123,13 @@ p span.red {
   font-weight: 500;
   font-size: 13px;
   transition: all 0.3s ease;
+	border: 1px solid transparent;
+}
+.b-pri:disabled,
+.b-sec:disabled,
+.b-danger:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 .b-pri:active,
 .b-sec:active,
