--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -39,8 +39,8 @@
   --body-font1: 'Roboto';
   --body-font2: 'IBM Plex Sans', sans-serif;
   /* --primary: #029686; */
-  --bg-pri: linear-gradient(45deg, lightblue, navy);
-  --primary: rgb(103, 103, 214);
+  --bg-pri: rgb(41, 41, 204);
+  --primary: rgb(41, 41, 204);
   --pri-plain: rgb(41, 41, 204);
 }
 
